visuals, animations and writing completed

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,31 +1,47 @@
 @import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Merriweather:wght@300&display=swap");
-
 body {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#00f260), to(#0575e6));
   background-image: linear-gradient(to right bottom, #00f260, #0575e6);
   background-attachment: fixed;
   color: #354538;
+  font-family: sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#00f260), to(#0575e6));
+  background-image: linear-gradient(to right bottom, #00f260, #0575e6);
+  border-radius: 50px;
+}
+
 a {
   text-decoration: none;
   color: #354548;
 }
+
 a:hover {
   text-decoration: none;
   color: #000000;
 }
+
 .app__container {
-  padding-top: 50px;
+  padding-top: 40px;
+  max-width: 1230px;
 }
+
 .app__row {
-  height: 86vh;
+  height: 90vh;
 }
+
 .app__main-content {
   background-color: #ffffff;
   border-radius: 20px;
   padding: 25px 15px;
 }
 
-/* ---------- sidebar ---------- */
 .sidebar {
   background-color: #ffffff;
   height: 100%;
@@ -33,72 +49,84 @@ a:hover {
   padding: 25px 15px;
   text-align: center;
 }
+
 .sidebar__avatar {
-  height: 110px;
+  height: 120px;
   width: 120px;
-  object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 100%;
+  border: 2px solid #f1f1f1;
 }
+
 .sidebar__icon {
   width: 25px;
   height: 25px;
 }
+
 .sidebar__name {
   font-family: "Kaushan Script";
   margin: 20px 0;
   font-size: 1.7rem;
 }
+
 .sidebar__name > span {
   color: #00f260;
 }
+
 .sidebar__item {
-  margin-bottom: 6px;
   padding-top: 6px;
   height: 40px;
   font-size: 1.05rem;
   border-radius: 30px;
+  margin-top: 6px;
 }
+
 .sidebar__title {
   background-color: #f1f1f1;
   border-radius: 30px;
 }
+
 .sidebar__contact {
   background-color: #dbdddf;
-  padding: 2px 0;
-  margin-top: 5px;
+  padding: 15px 0;
   margin: 25px -15px;
 }
+
 .sidebar__email {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#00f260), to(#0575e6));
   background-image: linear-gradient(to right bottom, #00f260, #0575e6);
   border-radius: 30px;
   color: #ffffff;
   margin: 15px 25px 0px;
   cursor: pointer;
+  -webkit-transition: all 3s linear;
   transition: all 3s linear;
 }
+
 .sidebar__email:hover {
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
-.sidebar__github:hover,
+
 .sidebar__resume:hover {
   background-color: #f1f1f2;
   color: #000000;
 }
-@media (max-width: 991px) {
-  .app__main-content {
-    margin: 30px 0;
-  }
-}
 
-/* ---------- navbar ---------- */
 .navbar__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .navbar__active {
   font-size: 2rem;
   font-weight: 700;
   color: #354358;
   border-bottom: 4px solid #00f260;
 }
+
 .navbar__item {
   margin-right: 20px;
   text-decoration: none;
@@ -106,6 +134,7 @@ a:hover {
   font-size: 1.2rem;
   cursor: pointer;
 }
+
 .navbar__item:hover {
   background: -webkit-linear-gradient(#00f260, #0575e6);
   background-clip: text;
@@ -113,20 +142,22 @@ a:hover {
   -webkit-text-fill-color: transparent;
 }
 
-/* ---------- about ---------- */
 .about {
   padding: 20px;
   margin: -35px;
 }
+
 .about__intro {
-  font-size: 1.1rem;
-  padding: 20px;
+  font-size: 1rem;
+  padding: 20px 28px;
   margin: 10px 0;
 }
+
 .about__container {
   background-color: #dbdddf;
   padding: 30px;
 }
+
 .about__heading {
   font-size: 25px;
   font-weight: 700;
@@ -134,65 +165,78 @@ a:hover {
   margin-left: 10px;
 }
 
-/* ---------- skill card ---------- */
 .skill-card {
   background-color: #ffffff;
   margin: 10px;
   padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   border-radius: 10px;
 }
+
 .skill-card__icon {
   width: 40px;
   height: 40px;
 }
+
 .skill-card-body {
   margin-left: 15px;
 }
+
 .skill-card__content {
   margin: 0;
   font-size: 0.9rem;
   color: #6e7e91;
 }
 
-/* ---------- resume ---------- */
 .resume {
   padding-top: 20px;
 }
+
 .resume-card__heading,
 .resume-languages__heading {
   margin-left: 10px;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 700;
   color: #354538;
 }
+
 .resume-card__body {
   margin-top: 10px;
 }
+
 .resume-card__title {
   font-weight: 700;
 }
+
 .resume-card__name {
   font-size: 16px;
 }
+
 .resume-card__details {
   font-size: 0.9rem;
   padding-top: 5px;
 }
 
-/* ---------- bar ---------- */
 .bar {
   width: 90%;
   background-color: #f1f2f3;
   border-radius: 20px;
   margin-bottom: 12px;
 }
+
 .bar__icon {
   width: 15px;
   height: 15px;
 }
+
 .bar__wrapper {
+  background-image: -webkit-gradient(linear, left top, right top, from(#00f260), to(#0575e6));
   background-image: linear-gradient(90deg, #00f260, #0575e6);
   border-radius: 20px;
   padding: 4px 14px;
@@ -200,4 +244,100 @@ a:hover {
   font-size: 0.9rem;
 }
 
-/* ---------- projects ---------- */
+.projects {
+  height: 70vh;
+  padding-top: 30px;
+  overflow-y: auto;
+}
+
+.projectCard__wrapper {
+  margin: 10px 0;
+  width: 100%;
+  height: 100%;
+  min-height: 160px;
+}
+
+.projectCard__image {
+  width: 100%;
+  height: 80%;
+  border: 1px solid #00f260;
+  border-radius: 30px;
+  -webkit-transition: -webkit-transform 0.3s linear;
+  transition: -webkit-transform 0.3s linear;
+  transition: transform 0.3s linear;
+  transition: transform 0.3s linear, -webkit-transform 0.3s linear;
+}
+
+.projectCard__image:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.projectCard__icon {
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
+}
+
+.projectCard__title {
+  margin-top: 12px;
+  font-size: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.projects__navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 5px;
+}
+
+.projects__navbar > div {
+  margin: 0 5px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.projects__navbar-active {
+  color: #00f260;
+}
+
+@media (max-width: 1280px) {
+  .app__container {
+    max-width: 1140px;
+    padding-left: 0px;
+  }
+}
+
+@media (max-width: 991px) {
+  .app__container {
+    padding-left: 15px;
+  }
+  .app__main-content {
+    margin: 30px 0;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 600px) {
+  .app__main-content {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+  .navbar__active {
+    font-size: 1.5rem;
+  }
+  .navbar__item {
+    font-size: 1rem;
+  }
+}
+/*# sourceMappingURL=styles.css.map */
