--- a/frontend/src/screens/home/home.css
+++ b/frontend/src/screens/home/home.css
@@ -59,7 +59,7 @@
 }
 
 .home__img {
-  background: url(../../assets/profile1.jpg);
+  background: url(../../assets/images/profile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
