--- a/frontend/src/screens/portfolio/portfolio.css
+++ b/frontend/src/screens/portfolio/portfolio.css
@@ -1,153 +1,118 @@
-.portfolio__container {
-  grid-template-columns: repeat(3, 270px);
-  justify-content: center;
-  column-gap: 1.8rem;
-}
-
-.portfolio__content {
-  position: relative;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: var(--container-color);
-  padding: 6rem 0 2rem 2.5rem;
-}
-
-.portfolio__icon {
-  display: block;
-  font-size: 2rem;
-  color: var(--title-color);
-  margin-bottom: var(--mb-1);
-}
-
-.portfolio__title {
-  font-size: var(--h3-font-size);
-  margin-bottom: var(--mb-1);
-  font-weight: var(--font-medium);
-}
-
-.portfolio__button {
-  color: var(--title-color);
-  font-size: var(--small-font-size);
-  display: inline-flex;
-  align-items: center;
-  column-gap: 0.25rem;
-  cursor: pointer;
-}
-
-.portfolio__button:hover .portfolio__button-icon {
-  transform: translateX(00.25rem);
-}
-
-.portfolio__modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
-  z-index: var(--z-modal);
+.work__filters {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 1rem;
-  opacity: 0;
-  visibility: hidden;
-}
-
-.portfolio__modal-content {
-  width: 500px;
-  position: relative;
-  background-color: var(--container-color);
-  padding: 4.5rem 2.5rem 2.5rem;
-  border-radius: 1.5rem;
-}
-
-.portfolio__modal-close {
-  position: absolute;
-  top: 1.5rem;
-  right: 1.5rem;
-  font-size: 1.5rem;
-  color: var(--title-color);
-  cursor: pointer;
-}
-
-.portfolio__modal-title,
-.portfolio__modal-description {
-  text-align: center;
-}
-
-.portfolio__modal-title {
-  font-size: var(--h3-font-size);
-  font-weight: var(--font-medium);
-  margin-bottom: var(--mb-1);
-}
-
-.portfolio__modal-description {
-  font-size: var(--small-font-size);
-  padding: 0 0.3rem;
+  column-gap: 0.75rem;
   margin-bottom: var(--mb-2);
 }
 
-.portfolio__modal-portfolio {
-  row-gap: 0.75rem;
+.work__item {
+  cursor: pointer;
+  color: var(--title-color);
+  padding: 0.25rem 0.75rem;
+  font-weight: var(--font-medium);
+  border-radius: 0.5rem;
+  text-transform: capitalize;
 }
 
-.portfolio__modal-service {
+.work__item:hover {
+  background-color: var(--title-color);
+  color: var(--container-color);
+}
+
+.work__container {
+  grid-template-columns: repeat(2, max-content);
+  gap: 3rem;
+  justify-content: center;
+}
+
+.work__card {
+  background-color: var(--container-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 1.25rem;
+  border-radius: 1rem;
+}
+
+.work__img {
+  width: 300px;
+  height: 200px;
+  border-radius: 1rem;
+  margin-bottom: var(--mb-1);
+}
+
+.work__title {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-0-5);
+}
+
+.work__button {
+  color: var(--text-color);
+  font-size: var(--small-font-size);
   display: flex;
   align-items: center;
-  column-gap: 0.5rem;
+  column-gap: 0.25rem;
 }
 
-.portfolio__modal-icon {
-  color: var(--title-color);
-  font-size: 1.1rem;
+.work__button-icon {
+  font-size: 1rem;
+  transition: 0.4s;
 }
 
-/* Active Modal */
-.active-modal {
-  opacity: 1;
-  visibility: visible;
+.work__button:hover .work__button-icon {
+  transform: translateX(0.25rem);
+}
+
+/* Active Work */
+.active-work {
+  background-color: var(--title-color);
+  color: var(--container-color);
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-  .portfolio__container {
-    grid-template-columns: repeat(3, 218px);
+  .work__container {
+    gap: 1.25rem;
+  }
+
+  .work__card {
+    padding: 1rem;
+  }
+
+  .work__img {
+    margin-bottom: 0.75rem;
+  }
+
+  .work__title {
+    margin-bottom: 0.25rem;
   }
 }
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
-  .portfolio__container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .portfolio__content {
-    padding: 3.5rem 0.5rem 1.25rem 1.25rem;
-  }
-
-  .portfolio__icon {
-    font-size: 1.5rem;
+  .work__container {
+    grid-template-columns: max-content;
   }
 }
 
 @media screen and (max-width: 576px) {
-  .portfolio__modal-content {
-    padding: 4.5rem 1.5rem 2.5rem;
+  .work__container {
+    grid-template-columns: 1fr;
   }
 
-  .portfolio__modal-description {
-    padding: 0;
+  .work__img {
+    width: 100%;
   }
 }
 
 /* For small devices */
 @media screen and (max-width: 350px) {
-  .portfolio__container {
-    grid-template-columns: max-content;
+  .work__item {
+    font-size: var(--small-font-size);
   }
 
-  .portfolio__content {
-    padding-right: 6rem;
+  .work__filters {
+    column-gap: 0.25rem;
   }
 }
