--- a/frontend/src/screens/portfolio/portfolio.css
+++ b/frontend/src/screens/portfolio/portfolio.css
@@ -1,4 +1,4 @@
-.work__filters {
+.portfolio__filters {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,7 +6,7 @@
   margin-bottom: var(--mb-2);
 }
 
-.work__item {
+.portfolio__item {
   cursor: pointer;
   color: var(--title-color);
   padding: 0.25rem 0.75rem;
@@ -15,38 +15,38 @@
   text-transform: capitalize;
 }
 
-.work__item:hover {
+.portfolio__item:hover {
   background-color: var(--title-color);
   color: var(--container-color);
 }
 
-.work__container {
+.portfolio__container {
   grid-template-columns: repeat(2, max-content);
   gap: 3rem;
   justify-content: center;
 }
 
-.work__card {
+.portfolio__card {
   background-color: var(--container-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 1.25rem;
   border-radius: 1rem;
 }
 
-.work__img {
+.portfolio__img {
   width: 300px;
   height: 200px;
   border-radius: 1rem;
   margin-bottom: var(--mb-1);
 }
 
-.work__title {
+.portfolio__title {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-0-5);
 }
 
-.work__button {
+.portfolio__button {
   color: var(--text-color);
   font-size: var(--small-font-size);
   display: flex;
@@ -54,17 +54,17 @@
   column-gap: 0.25rem;
 }
 
-.work__button-icon {
+.portfolio__button-icon {
   font-size: 1rem;
   transition: 0.4s;
 }
 
-.work__button:hover .work__button-icon {
+.portfolio__button:hover .portfolio__button-icon {
   transform: translateX(0.25rem);
 }
 
-/* Active Work */
-.active-work {
+/* Active portfolio */
+.active-portfolio {
   background-color: var(--title-color);
   color: var(--container-color);
 }
@@ -72,47 +72,47 @@
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-  .work__container {
+  .portfolio__container {
     gap: 1.25rem;
   }
 
-  .work__card {
+  .portfolio__card {
     padding: 1rem;
   }
 
-  .work__img {
+  .portfolio__img {
     margin-bottom: 0.75rem;
   }
 
-  .work__title {
+  .portfolio__title {
     margin-bottom: 0.25rem;
   }
 }
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
-  .work__container {
+  .portfolio__container {
     grid-template-columns: max-content;
   }
 }
 
 @media screen and (max-width: 576px) {
-  .work__container {
+  .portfolio__container {
     grid-template-columns: 1fr;
   }
 
-  .work__img {
+  .portfolio__img {
     width: 100%;
   }
 }
 
 /* For small devices */
 @media screen and (max-width: 350px) {
-  .work__item {
+  .portfolio__item {
     font-size: var(--small-font-size);
   }
 
-  .work__filters {
+  .portfolio__filters {
     column-gap: 0.25rem;
   }
 }
